Fix centering of Clear and Help buttons on small screens. (#227)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -892,7 +892,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results #intro-overlay { left: 12% !important; top: 100px !important; }
   body.skey.results #results-display label { display: none; }
   body.skey.results.mobile-wide { /* Styles for testing: mobile variant where filters list is full width of screen */ }
-  body.skey.results.mobile-wide #question-nav .section a.clear-all-btn, body.skey.results.mobile-wide #question-nav .section a.get-help-btn { margin: 0 100px; }
+  body.skey.results.mobile-wide #question-nav .section a.clear-all-btn, body.skey.results.mobile-wide #question-nav .section a.get-help-btn { margin: 0 0 0 95px; }
   body.skey.results.mobile-wide .species-count-heading { left: -235px; }
   body.skey.results.mobile-wide .view-tabs li:first-child a { margin-left: 32px; }
   body.skey.results.mobile-wide .more-questions-dialog .view-tabs li:first-child a { margin-left: 5px; } }
@@ -900,7 +900,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
 @media only screen and (min-width: 401px) and (max-width: 600px) { body.skey { /* end &.results.mobile-wide */ }
   body.skey.results #intro-overlay { left: 26% !important; }
   body.skey.results.mobile-wide { /* Styles for testing: mobile variant where filters list is full width of screen */ }
-  body.skey.results.mobile-wide #question-nav .section a.clear-all-btn, body.skey.results.mobile-wide #question-nav .section a.get-help-btn { margin: 0 180px; }
+  body.skey.results.mobile-wide #question-nav .section a.clear-all-btn, body.skey.results.mobile-wide #question-nav .section a.get-help-btn { margin: 0 170px; }
   body.skey.results.mobile-wide .species-count-heading { left: -310px; }
   body.skey.results.mobile-wide .view-tabs li:first-child a { margin-left: 112px; }
   body.skey.results.mobile-wide .more-questions-dialog .view-tabs li:first-child a { margin-left: 22px; } }
