--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1020,7 +1020,7 @@ ul.get-more-questions-menu {
             #question-nav {
                 .section {
                     a.clear-all-btn, a.get-help-btn {
-                        margin: 0 100px;
+                        margin: 0 0 0 95px;
                     }
                 }
             }
@@ -1054,7 +1054,7 @@ ul.get-more-questions-menu {
             #question-nav {
                 .section {
                     a.clear-all-btn, a.get-help-btn {
-                        margin: 0 180px;
+                        margin: 0 170px;
                     }
                 }
             }
